src/main/resources/standards/vgm/v100/changelog.md
# Verified Gross Mass (VGM) v1.0.0 Changelog

## Snapshot v1.0.0-20251114-beta

Updated the list of mandatory vs. optional GET query parameter filters. (SD-2642)

Updated the description and example of the `authorizedPersonSignatory` attribute. (SD-2638)

In the `VGMDeclaration` object, the `VGM` attribute is now between the details and the parties attributes. (SD-2639)

In the `FeedbackElement` object, corrected the example of attribute `propertyPath`. (SD-2645)

Clarified that `GeoCoordinate` attributes `latitude` and `longitude` are expected to be in ISO 6709 decimal degrees. (SD-2644)

In the `VesselVoyageDetails` object, updated the description of attribute `carrierCode`. (SD-2646)

Added `Seal` placement and new source values. (SD-2655)

Clarified in object `VesselVoyageDetails` the definition of attribute `vesselName`. (SD-2624)


## Snapshot v1.0.0-20251107-alpha

Updated in type `EquipmentDetails` the description of attribute `cargoGrossWeight`. (SD-2623)


## Snapshot v1.0.0-20251024-design

Initial VGM v1.0.0 design stage snapshot. (SD-2533)
